--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -12,7 +12,7 @@
   The Core Features of Pragmatic Dharma by Vince Horn
   In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on the main page of this website.
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
- &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
+ &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta name="keywords" content="" />
 
 
@@ -21,7 +21,7 @@
   The Core Features of Pragmatic Dharma by Vince Horn
   In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on the main page of this website.
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
- &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
+ &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/pragmatic-dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -34,7 +34,7 @@
   The Core Features of Pragmatic Dharma by Vince Horn
   In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on the main page of this website.
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
- &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so."/>
+ &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so."/>
 
 
 
@@ -43,7 +43,7 @@
   The Core Features of Pragmatic Dharma by Vince Horn
   In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on the main page of this website.
  What about the &ldquo;mushroom culture&rdquo;? Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:
- &hellip;..In fact, Bill (editors note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
+ &hellip;..In fact, Bill (editor&rsquo;s note: Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so.">
 
 <meta itemprop="wordCount" content="465">
 
@@ -190,7 +190,7 @@
 <h2 id="what-about-the-mushroom-culture">What about the &ldquo;mushroom culture&rdquo;?</h2>
 <p>Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:</p>
 <blockquote>
-<p>&hellip;..In fact, Bill (<strong>editors note:</strong> Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so. (thread)</p>
+<p>&hellip;..In fact, Bill (<strong>editor&rsquo;s note:</strong> Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so. (thread)</p>
 <p>When I returned from the IMS 3-month retreat in 1991, Bill told me where he thought I was on the Progress of Insight map. But his policy was to only share mapping information after the fact. In other words, he wouldn&rsquo;t talk with me about stages I hadn&rsquo;t yet attained.</p>
 <p>When I complained that the IMS teachers hadn&rsquo;t even been willing to discuss the stages I&rsquo;d already been through, Bill quipped that they&rsquo;d treated me like a mushroom, keeping me in the dark and feeding me shit.</p>
 <p>While Bill was more forthcoming with information than mainstream American Theravada Buddhist teachers, he was by no means a freedom of information crusader. But to me the presumption, paternalism, and ineffective pedagogy that result from mushrooming were infuriating.</p>
