--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -179,16 +179,16 @@
 <h2 id="what-is-pragmatic-dharma">What is Pragmatic Dharma?</h2>
 <ul>
 <li>
-<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by Ron Crouch</p>
+<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></p>
 </li>
 <li>
 <p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by Vince Horn</p>
 </li>
 </ul>
-<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.github.io/">the main page of this website</a>.</p>
+<p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.github.io/#pragmatic-dharma">the main page of this website</a>.</p>
 <p> </p>
 <h2 id="what-about-the-mushroom-culture">What about the &ldquo;mushroom culture&rdquo;?</h2>
-<p>Here&rsquo;s a short story shared by Kenneth Folk via his twitter account:</p>
+<p>Here&rsquo;s a short story shared by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a> via <a href="https://twitter.com/kennethfolk">his twitter account</a>:</p>
 <blockquote>
 <p>&hellip;..In fact, Bill (<strong>editor&rsquo;s note:</strong> Hamilton) was himself an unabashed mushroomer, and not only withheld information but advocated doing so. (thread)</p>
 <p>When I returned from the IMS 3-month retreat in 1991, Bill told me where he thought I was on the Progress of Insight map. But his policy was to only share mapping information after the fact. In other words, he wouldn&rsquo;t talk with me about stages I hadn&rsquo;t yet attained.</p>
@@ -213,7 +213,7 @@
 <p><a href="https://github.com/ahtrahddis/kf3st">The Three Speed Transmission: an unofficial collection of texts by Kenneth Folk</a> by <a href="https://kennethfolkdharma.com/">Kenneth Folk</a></p>
 </li>
 <li>
-<p><a href="https://github.com/ahtrahddis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by Ron Crouch</p>
+<p><a href="https://github.com/ahtrahddis/alohadharma">Aloha Dharma: a compilation of texts from https://alohadharma.com</a> by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></p>
 </li>
 </ul>
 <p> </p>
