--- a/pragmatic-dharma/index.html
+++ b/pragmatic-dharma/index.html
@@ -182,7 +182,7 @@
 <p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/">What is Pragmatic Dharma?</a> by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></p>
 </li>
 <li>
-<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by Vince Horn</p>
+<p><a href="https://ahtrahddis.github.io/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/">The Core Features of Pragmatic Dharma</a> by <a href="http://www.vincehorn.space/">Vince Horn</a></p>
 </li>
 </ul>
 <p>In case you didn&rsquo;t notice it, there&rsquo;s a dedicated subsection with various Pragmatic Dharma texts on <a href="https://ahtrahddis.github.io/#pragmatic-dharma">the main page of this website</a>.</p>
