--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -8,14 +8,14 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>The Core Features of Pragmatic Dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="The Core Features of Pragmatic Dharma" />
-<meta name="description" content="This is an article written by Vince Horn
+<meta name="description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="The Core Features of Pragmatic Dharma" />
-<meta property="og:description" content="This is an article written by Vince Horn
+<meta property="og:description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used." />
 <meta property="og:type" content="article" />
@@ -26,18 +26,18 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="The Core Features of Pragmatic Dharma"/>
-<meta name="twitter:description" content="This is an article written by Vince Horn
+<meta name="twitter:description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used."/>
 
 
 
 <meta itemprop="name" content="The Core Features of Pragmatic Dharma">
-<meta itemprop="description" content="This is an article written by Vince Horn
+<meta itemprop="description" content="This is an article by Vince Horn.
  Introduction Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.
 Pragmatic Dharma, at its core, is about asking the question: What works? If something doesn’t work, then it’s relinquished. If it works, it’s used.">
 
-<meta itemprop="wordCount" content="1724">
+<meta itemprop="wordCount" content="1723">
 
 
 
@@ -168,7 +168,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 <content>
   <br>
-<p><em>This is <a href="https://www.pragmaticdharma.training/blog/core-features-pragmatic-dharma">an article</a> written by <a href="http://www.vincehorn.space/">Vince Horn</a></em></p>
+<p><em>This is <a href="https://www.pragmaticdharma.training/blog/core-features-pragmatic-dharma">an article</a> by <a href="http://www.vincehorn.space/">Vince Horn</a></em>.</p>
 <p> </p>
 <h2 id="introduction">Introduction</h2>
 <p>Pragmatic Dharma is a contemporary approach to awakening, rooted in tradition. It pulls from the time-tested teachings and practices of the Buddhist tradition, but is simultaneously infused with a contemporary mindset that isn’t afraid to tinker with the traditional formulations.</p>
