--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -8,13 +8,13 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>What is Pragmatic Dharma? | Яeversed Ƨiddhartha</title>
 <meta name="title" content="What is Pragmatic Dharma?" />
-<meta name="description" content="This is an article written by Ron Crouch
+<meta name="description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="What is Pragmatic Dharma?" />
-<meta property="og:description" content="This is an article written by Ron Crouch
+<meta property="og:description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/texts/pragmatic-dharma/what-is-pragmatic-dharma/" />
@@ -24,16 +24,16 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="What is Pragmatic Dharma?"/>
-<meta name="twitter:description" content="This is an article written by Ron Crouch
+<meta name="twitter:description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism."/>
 
 
 
 <meta itemprop="name" content="What is Pragmatic Dharma?">
-<meta itemprop="description" content="This is an article written by Ron Crouch
+<meta itemprop="description" content="This is an article by Ron Crouch.
 I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because Jack Kornfield recently criticized it on Buddhist Geeks. Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism.">
 
-<meta itemprop="wordCount" content="2149">
+<meta itemprop="wordCount" content="2148">
 
 
 
@@ -164,7 +164,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
 <content>
   <br>
-<p><em>This is an article written by Ron Crouch</em></p>
+<p><em>This is an article by <a href="https://web.archive.org/web/20190424160827/https://alohadharma.com/about/">Ron Crouch</a></em>.</p>
 <br>
 <p>I’ve been thinking a lot about what “pragmatic dharma” is lately. This is partly because I’m trying to get my own head straight as I write about it, and partly because <a href="https://www.jackkornfield.com">Jack Kornfield</a> recently criticized it on <a href="http://podbay.fm/show/211752923/e/1442707200?autostart=1">Buddhist Geeks</a>.
 Kornfield, in his usual gentle style, was mostly circumspect in his criticism, but he did say that the leaders of the pragmatic dharma movement (I’m assuming he means Kenneth Folk and Daniel Ingram) have redefined key concepts in Buddhism. He suggested that the attainments aimed for in pragmatic dharma are, in essence, not the real thing. Coming from the author of <em>A Path with Heart</em>, one of the most easy-going, downright cuddly dharma books out there (while also covering some deep wisdom), such direct criticism is pretty harsh stuff. He also pointed out that the idea that people could attain enlightenment in lay life, a key idea in pragmatic circles, is something that does not make a lot of sense to him and that the experiences and insights a person has in lay life are not the same, not as “transformative,” as what occurs in a more rigorous monastic setting like the Mahasi centers in Burma. He seemed to imply that he understood what goes on in those places while Kenneth and Daniel do not, and so they are redefining things out of misunderstanding. This is odd, because both Kenneth and Daniel spent significant stretches of time in the Asian centers Kornfield is referring to, in the exact same lineage as him, so something isn’t quite making sense. It really seems like a he said/she said sort of situation. I disagree with him here, so hope I didn’t just distort his point of view too much.</p>
