revised/updated content

--- a/dharma/index.html
+++ b/dharma/index.html
@@ -8,18 +8,20 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>dharma | Яeversed Ƨiddhartha</title>
 <meta name="title" content="dharma" />
-<meta name="description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a meditation group I was a member of.
-Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:
+<meta name="description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
-  Mahasi Vipassana (Noting) (from this blog)" />
+  Mahasi Vipassana (Noting) (from this blog)
+  Shikantaza (Zazen) (from this e-book)
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video) (I later coverted this guide to e-book!" />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="dharma" />
-<meta property="og:description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a meditation group I was a member of.
-Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:
+<meta property="og:description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
-  Mahasi Vipassana (Noting) (from this blog)" />
+  Mahasi Vipassana (Noting) (from this blog)
+  Shikantaza (Zazen) (from this e-book)
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video) (I later coverted this guide to e-book!" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/dharma/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -28,20 +30,22 @@ Below you will find a link to a compressed file I shared with them. It includes 
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="dharma"/>
-<meta name="twitter:description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a meditation group I was a member of.
-Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:
+<meta name="twitter:description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
-  Mahasi Vipassana (Noting) (from this blog)"/>
+  Mahasi Vipassana (Noting) (from this blog)
+  Shikantaza (Zazen) (from this e-book)
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video) (I later coverted this guide to e-book!"/>
 
 
 
 <meta itemprop="name" content="dharma">
-<meta itemprop="description" content="Practice How do I start meditating? Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a meditation group I was a member of.
-Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:
+<meta itemprop="description" content="Practice How do I start meditating? Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:
   Mindfulness of Breath (from TMI)
-  Mahasi Vipassana (Noting) (from this blog)">
+  Mahasi Vipassana (Noting) (from this blog)
+  Shikantaza (Zazen) (from this e-book)
+  Do nothing from (from Shinzen&rsquo;s Five ways to know yourself and &ldquo;Do Nothing&rdquo; Meditation youtube video) (I later coverted this guide to e-book!">
 
-<meta itemprop="wordCount" content="547">
+<meta itemprop="wordCount" content="506">
 
 
 
@@ -174,8 +178,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
   <p> </p>
 <h2 id="practice">Practice</h2>
 <h3 id="how-do-i-start-meditating">How do I start meditating?</h3>
-<p>Months ago, I created a small set of meditation instructions in pdf, in order to help the beginners of a meditation group I was a member of.</p>
-<p>Below you will find a link to a compressed file I shared with them. It includes some very basic instructions for:</p>
+<p>Below you will find a link to a compressed file that includes instructions in pdf format for the following techniques:</p>
 <ul>
 <li>
 <p>Mindfulness of Breath (from <a href="https://www.goodreads.com/book/show/25942786-the-mind-illuminated">TMI</a>)</p>
@@ -216,7 +219,7 @@ Below you will find a link to a compressed file I shared with them. It includes 
 </blockquote>
 <p> </p>
 <h3 id="are-you-interested-in-noting">Are you interested in noting?</h3>
-<p>If you have decided to go with noting (which is Mahasi Sayadaw&rsquo;s vipassana technique), apart from this nice introductory text included in the above pack, I suggest you to read the following material:</p>
+<p>If you have decided to go with noting (which is <a href="https://mahasivipassana.com">Mahasi Sayadaw&rsquo;s Vipassana</a> technique), apart from this nice introductory text included in the above pack, I suggest you to read the following material:</p>
 <ul>
 <li>
 <p><a href="https://mahasivipassana.com/docs/practical-vipassana-meditation-exercises/">Practical Vipassana Meditation Exercises</a></p>
@@ -235,10 +238,10 @@ Below you will find a link to a compressed file I shared with them. It includes 
 <p>If you are interested in all-day practice, you might want to check <a href="https://ashintejaniya.org/">Sayadaw U Tejaniya</a> and <a href="https://ashintejaniya.org/teachings">his teachings</a>.</p>
 <p> </p>
 <h2 id="pragmatic-dharma">Pragmatic Dharma</h2>
-<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.
- </p>
+<p>For more information about Pragmatic Dharma, please visit <a href="https://ahtrahddis.github.io/pragmatic-dharma/">this link</a>.</p>
+<p> </p>
 <h2 id="note">Note</h2>
-<p>On the above sections, I referred to other people as &ldquo;beginners&rdquo;. Please note that I&rsquo;m not an expert: I&rsquo;m a beginner too and I just try to assist fellow meditators that know less than I do.</p>
+<p>Please note that I&rsquo;m not an expert. I am just a beginner, trying to help fellow meditators that know less than I do.</p>
 
 </content>
 <p>
