--- a/404.html
+++ b/404.html
@@ -151,8 +151,10 @@
 </nav>
 </header>
   <main>
-<h1>404</h1>
-<h2>ʕノ•ᴥ•ʔノ ︵ ┻━┻</h2>
+<h1>You've reached the end of suffering..</h1>
+
+<img src="images/404.jpg" alt="ERROR 404">
+<br>
 
   </main>
   <footer>
