--- a/404.html
+++ b/404.html
@@ -151,10 +151,11 @@
 </nav>
 </header>
   <main>
-<h1>You've reached the end of suffering..</h1>
+<center><h1>You've reached the end of suffering..</h1></center>
 
 <img src="images/404.jpg" alt="ERROR 404">
 <br>
+<center><a href="index.html">Go Home!</a></center>
 
   </main>
   <footer>
