--- a/404.html
+++ b/404.html
@@ -155,7 +155,7 @@
 <img src="images/404.jpg" alt="ERROR 404">
 <br>
 <br>
-<center><a href="index.html">Go Home!</a></center>
+<center><a href="/">Go Home!</a></center>
 
   </main>
   <footer>
