--- a/404.html
+++ b/404.html
@@ -151,8 +151,10 @@
 </nav>
 </header>
   <main>
-<center><h1>You've reached the end of suffering..</h1></center>
-<img src="https://ahtrahddis.github.io/images/404.jpg" alt="ERROR 404"> 
+<br>
+<center><h2><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></h2></center>
+<br>
+<center><iframe width="640" height="360" src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
 <br>
 <br>
 <center><a href="/">Go Home!</a></center>
