added custom CSS for youtube videos

--- a/404.html
+++ b/404.html
@@ -129,6 +129,26 @@
     font-size: small;
   }
 
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 </style>
 
 </head>
@@ -154,7 +174,9 @@
 <br>
 <center><h2><font color="black"><tt>(Error) The page you requested was sucked into the void (404)</tt></font></h2></center>
 <br>
-<center><iframe width="640" height="360" src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+<div class="video-container">
+  <iframe src="https://www.youtube.com/embed/fx2Z5ZD_Rbo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
 <br>
 <br>
 <center><a href="/">Go Home!</a></center>
