--- a/about/index.html
+++ b/about/index.html
@@ -143,6 +143,26 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
     font-size: small;
   }
 
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
 </style>
 
 </head>
