added "awakening from the meaning crisis" link

--- a/links/index.html
+++ b/links/index.html
@@ -15,7 +15,7 @@
    Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
   Contemplative Fitness by Kenneth Folk
-   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft" />
+   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
 <meta name="keywords" content="" />
 
 
@@ -27,7 +27,7 @@
    Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
   Contemplative Fitness by Kenneth Folk
-   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft" />
+   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/links/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -43,7 +43,7 @@
    Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
   Contemplative Fitness by Kenneth Folk
-   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft"/>
+   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)"/>
 
 
 
@@ -55,9 +55,9 @@
    Communities  r/streamentry (a practice oriented reddit community)   Online Books   Mindfulness in Plain English by Ven. Henepola Gunaratana
   Mastering the Core Teachings of the Buddha by Daniel Ingram
   Contemplative Fitness by Kenneth Folk
-   Youtube  Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)   Podcasts   Deconstructing Yourself by Michael Taft">
+   Youtube   Doug&rsquo;s Dharma (an amazing secular/early Buddhism resource)">
 
-<meta itemprop="wordCount" content="77">
+<meta itemprop="wordCount" content="85">
 
 
 
@@ -250,7 +250,12 @@
 <p> </p>
 <h3 id="youtube">Youtube</h3>
 <ul>
-<li><a href="https://www.youtube.com/channel/UCPIyEJzvW7SsbiIrooixjNA/videos">Doug&rsquo;s Dharma</a> (an amazing secular/early Buddhism resource)</li>
+<li>
+<p><a href="https://www.youtube.com/channel/UCPIyEJzvW7SsbiIrooixjNA/videos">Doug&rsquo;s Dharma</a> (an amazing secular/early Buddhism resource)</p>
+</li>
+<li>
+<p><a href="https://www.youtube.com/watch?v=54l8_ewcOlY&amp;list=PLND1JCRq8Vuh3f0P5qjrSdb5eC1ZfZwWJ">Awakening from the Meaning Crisis</a> by <a href="https://www.psych.utoronto.ca/people/directories/all-faculty/john-vervaeke">John Vervaeke</a></p>
+</li>
 </ul>
 <p> </p>
 <h3 id="podcasts">Podcasts</h3>
