renamed About page to Info

--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -179,7 +179,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
 
 <a href="/links/">Links</a>
 
-<a href="/about/">About</a>
+<a href="/info/">Info</a>
 
 
 </nav>
