--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -175,7 +175,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
 <a href="/links/">Links</a>
 
-<a href="/about/">About</a>
+<a href="/info/">Info</a>
 
 
 </nav>
