--- a/info/index.html
+++ b/info/index.html
@@ -6,33 +6,33 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0,user-scalable=0" />
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
-<title>about | Яeversed Ƨiddhartha</title>
-<meta name="title" content="about" />
+<title>info | Яeversed Ƨiddhartha</title>
+<meta name="title" content="info" />
 <meta name="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta name="keywords" content="" />
 
 
-<meta property="og:title" content="about" />
+<meta property="og:title" content="info" />
 <meta property="og:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://ahtrahddis.github.io/about/" />
+<meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
 
 
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="about"/>
+<meta name="twitter:title" content="info"/>
 <meta name="twitter:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme."/>
 
 
 
-<meta itemprop="name" content="about">
+<meta itemprop="name" content="info">
 <meta itemprop="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
  Website Software This website was created with hugo and hugo bear blog theme.">
@@ -179,7 +179,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 
 <a href="/links/">Links</a>
 
-<a href="/about/">About</a>
+<a href="/info/">Info</a>
 
 
 </nav>
