--- a/info/index.html
+++ b/info/index.html
@@ -8,16 +8,18 @@
 <link rel="shortcut icon" href="https://ahtrahddis.github.io/images/favicon.png" />
 <title>info | Яeversed Ƨiddhartha</title>
 <meta name="title" content="info" />
-<meta name="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
+<meta name="description" content="Contact If you want to contact me, please send me an email:
+ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Software This website was created with hugo and hugo bear blog theme." />
+ Website Changelog In order to see website changes, new addiditons etc., visit this link." />
 <meta name="keywords" content="" />
 
 
 <meta property="og:title" content="info" />
-<meta property="og:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
+<meta property="og:description" content="Contact If you want to contact me, please send me an email:
+ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Software This website was created with hugo and hugo bear blog theme." />
+ Website Changelog In order to see website changes, new addiditons etc., visit this link." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -26,18 +28,20 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="info"/>
-<meta name="twitter:description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
+<meta name="twitter:description" content="Contact If you want to contact me, please send me an email:
+ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Software This website was created with hugo and hugo bear blog theme."/>
+ Website Changelog In order to see website changes, new addiditons etc., visit this link."/>
 
 
 
 <meta itemprop="name" content="info">
-<meta itemprop="description" content="Contact If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.
+<meta itemprop="description" content="Contact If you want to contact me, please send me an email:
+ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Software This website was created with hugo and hugo bear blog theme.">
+ Website Changelog In order to see website changes, new addiditons etc., visit this link.">
 
-<meta itemprop="wordCount" content="71">
+<meta itemprop="wordCount" content="84">
 
 
 
@@ -189,8 +193,12 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <content>
   <p> </p>
 <h2 id="contact">Contact</h2>
-<p>If you want to contact me, please send me an email at: ns |at| mahasivipassana |dot| com.</p>
+<p>If you want to contact me, please send me an email:</p>
+<p>ns |at| mahasivipassana |dot| com.</p>
 <p>If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.</p>
+<p> </p>
+<h2 id="website-changelog">Website Changelog</h2>
+<p>In order to see website changes, new addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
 <p> </p>
 <h2 id="website-software">Website Software</h2>
 <p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bear blog</a> theme.</p>
