--- a/info/index.html
+++ b/info/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="Contact If you want to contact me, please send me an email:
 ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Changelog In order to see website changes, new addiditons etc., visit this link." />
+ Changelog In order to see website changes, new addiditons etc., visit this link." />
 <meta name="keywords" content="" />
 
 
@@ -19,7 +19,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <meta property="og:description" content="Contact If you want to contact me, please send me an email:
 ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Changelog In order to see website changes, new addiditons etc., visit this link." />
+ Changelog In order to see website changes, new addiditons etc., visit this link." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="https://ahtrahddis.github.io/info/" />
 <meta property="og:site_name" content="Reversed Siddhartha" />
@@ -31,7 +31,7 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <meta name="twitter:description" content="Contact If you want to contact me, please send me an email:
 ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Changelog In order to see website changes, new addiditons etc., visit this link."/>
+ Changelog In order to see website changes, new addiditons etc., visit this link."/>
 
 
 
@@ -39,9 +39,9 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <meta itemprop="description" content="Contact If you want to contact me, please send me an email:
 ns |at| mahasivipassana |dot| com.
 If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.
- Website Changelog In order to see website changes, new addiditons etc., visit this link.">
+ Changelog In order to see website changes, new addiditons etc., visit this link.">
 
-<meta itemprop="wordCount" content="84">
+<meta itemprop="wordCount" content="82">
 
 
 
@@ -197,10 +197,10 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <p>ns |at| mahasivipassana |dot| com.</p>
 <p>If you found a typo or formatting issue or&hellip;. on an e-book, apart from sending me an email, you can create a github account, fork the relevant repository, apply any change you suggest and then push it back to me.</p>
 <p> </p>
-<h2 id="website-changelog">Website Changelog</h2>
+<h2 id="changelog">Changelog</h2>
 <p>In order to see website changes, new addiditons etc., visit <a href="https://ahtrahddis.github.io/changelog/">this link</a>.</p>
 <p> </p>
-<h2 id="website-software">Website Software</h2>
+<h2 id="software">Software</h2>
 <p>This website was created with <a href="https://gohugo.io/">hugo</a> and  <a href="https://github.com/janraasch/hugo-bearblog">hugo bear blog</a> theme.</p>
 
 </content>
