replaced font with IBM Plex Mono

--- a/dharma/index.html
+++ b/dharma/index.html
@@ -58,8 +58,11 @@
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
+ 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+
   body {
-    font-family: Verdana, sans-serif;
+    font-family: IBM Plex Mono, monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
