--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
 
   <link rel="alternate" type="application/rss+xml" href="https://ahtrahddis.github.io/index.xml" title="Яeversed Ƨiddhartha" />
   <style>
+ 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+
   body {
-    font-family: Verdana, sans-serif;
+    font-family: IBM Plex Mono, monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
