--- a/info/index.html
+++ b/info/index.html
@@ -50,8 +50,11 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
+ 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+
   body {
-    font-family: Verdana, sans-serif;
+    font-family: IBM Plex Mono, monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
