--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -42,8 +42,11 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 <meta name="referrer" content="no-referrer-when-downgrade" />
 
   <style>
+ 
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@1,500&display=swap');
+
   body {
-    font-family: Verdana, sans-serif;
+    font-family: IBM Plex Mono, monospace;
     margin: auto;
     padding: 20px;
     max-width: 720px;
