added Verdana font for website title

--- a/info/index.html
+++ b/info/index.html
@@ -82,6 +82,8 @@ If you found a typo or formatting issue or&hellip;. on an e-book, apart from sen
   }
 
   .title {
+  	font-family: Verdana, sans-serif;
+  	font-size: 18px;
     text-decoration: none;
     border: 0;
   }
