--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -74,6 +74,8 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   .title {
+  	font-family: Verdana, sans-serif;
+  	font-size: 18px;
     text-decoration: none;
     border: 0;
   }
