--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -78,6 +78,8 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   }
 
   .title {
+  	font-family: Verdana, sans-serif;
+  	font-size: 18px;
     text-decoration: none;
     border: 0;
   }
